AG-9816 fix filters section styles
Merge in EXTENSIONS/browser-extension from fix/AG-9816 to feature/AG-2737

Squashed commit of the following:

commit 28721429502452e35387e2d25edc52e5a21ef58d
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Fri Aug 27 20:31:42 2021 +0300

    fix filters search input padding

commit 72d2ddcb5fbb9fbf2399f9a6e340fbb7ef4ea1d2
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Fri Aug 27 20:04:57 2021 +0300

    fix filters button.select__value font weight

--- a/Extension/src/pages/options/components/Filters/Search/search.pcss
+++ b/Extension/src/pages/options/components/Filters/Search/search.pcss
@@ -14,7 +14,6 @@
     }
 
     &__label {
-        padding: 10px 8px 10px 16px;
         min-width: 90px;
         flex-grow: 1;
     }
@@ -22,7 +21,7 @@
     &__input {
         border: 0;
         background: none;
-        padding: 0;
+        padding: 10px 8px 10px 16px;
         outline: none;
         font-size: 14px;
         width: 100%;
@@ -57,6 +56,7 @@
         option {
             color: var(--gray700);
             font-size: 14px;
+            font-weight: 400;
 
             @media (min-width: 640px) {
                 font-size: 16px;
